--- a/ufpr_convida/pubspec.yaml
+++ b/ufpr_convida/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   google_maps_flutter: ^0.5.11
+  flutter_masked_text: ^0.8.0
 
 dev_dependencies:
   flutter_test:
@@ -44,6 +45,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logo-ufpr.png
+    - assets/logo-ufprconvida.tiff
+    - assets/logo-ufprconvida.png
+    - assets/logo-ufprconvida-sembordas.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
