--- a/ufpr_convida/pubspec.yaml
+++ b/ufpr_convida/pubspec.yaml
@@ -25,10 +25,12 @@ dependencies:
   cupertino_icons: ^0.1.2
   google_maps_flutter: ^0.5.11
   flutter_masked_text: ^0.8.0
-
+  http: any
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 
 # For information on the generic Dart part of this file, see the
