Alteração e deleção de evento pronto e data arrumada

--- a/ufpr_application/build.gradle
+++ b/ufpr_application/build.gradle
@@ -17,4 +17,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jersey'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	 implementation 'org.springframework.boot:spring-boot-starter-security'
+  testImplementation('org.springframework.boot:spring-boot-starter-test') {
+    exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+  }
+  testImplementation 'org.springframework.security:spring-security-test'
 }
