--- a/ufpr_application/build.gradle
+++ b/ufpr_application/build.gradle
@@ -16,7 +16,16 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-jersey'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
- 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+	testImplementation('org.springframework.boot:spring-boot-starter-test') {
     exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
   }
+  implementation 'org.springframework.boot:spring-boot-starter-security'
+  testImplementation('org.springframework.boot:spring-boot-starter-test') {
+    exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+  }
+  testImplementation 'org.springframework.security:spring-security-test'
+  
+  compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+
+  
 }
