--- a/ufpr_convida/pubspec.yaml
+++ b/ufpr_convida/pubspec.yaml
@@ -57,6 +57,10 @@ flutter:
     - assets/event-type-1.png
     - assets/event-type-2.png
     - assets/event-type-3.png
+    - assets/graduated.png
+    - assets/calendar.png
+    - assets/meeting.png
+    - assets/disco-ball.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
